<resources>

    <string name="app_name" translatable="false">To Do List: Task Reminder App</string>
    <string name="sign_in_text">Sign In</string>
    <string name="username_e_mail_text">Username/E-mail</string>
    <string name="password_text">Password</string>
    <string name="remember_me_text">Remember me</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="already_have_an_account_text">Already have an account.</string>
    <string name="select_gender_text">Select gender</string>
    <string name="male_text">Male</string>
    <string name="fe_male_text">Fe-male</string>
    <string name="transgender_text">Transgender</string>
    <string name="fill_this_field_text">Please!Fill this field…</string>
    <string name="password_is_wrong_text">Password is wrong…</string>
    <string name="username_email_is_wrong_text">Username/Email is wrong…</string>
    <string name="password_is_too_long_text">Password is too long…</string>
    <string name="sign_up_successfully_toast_message_text">You are Sign-Up successfully.</string>
    <string name="sign_in_successfully_toast_message_text">You are Sign-In successfully.</string>
    <string name="tasks_text">Tasks</string>
    <string name="personal_text">Personal</string>
    <string name="work_text">Work</string>
    <string name="add_todo_task_text">Add todo task</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="date_hint">Date (mm dd, yyyy)</string>
    <string name="time_hint">Time</string>
    <string name="info_message_text">Fill the detail\'s below to add a task into your todo list</string>
    <string name="save_button_text">Save</string>
    <string name="title_error_text">Please!Enter title above…</string>
    <string name="description_error_text">Please!Enter description above…</string>
    <string name="select_date_error_text">Please!Select date…</string>
    <string name="select_time_error_text">Please!Select time…</string>
    <string name="select_date_text">Select Date</string>
    <string name="select_time_text">Select Time</string>
    <string name="day_of_week_error_text">Please!Enter day of week…</string>
    <string name="day_of_week_hint">Day of week</string>
    <string name="task_is_saved_successfully_toast_text">Task is saved successfully…</string>
    <string name="task_is_not_saved_successfully_toast_text">Task isn\'t saved successfully.</string>
    <string name="nothing_in_here_text"><b><u>Nothing in here</u></b></string>
    <string name="are_you_sure_you_want_to_sign_out_text">Are you sure you want to <b>SIGN-OUT</b></string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="select_category_text">Select category</string>
    <string name="update_text">Update</string>
    <string name="delete_text">Delete</string>
    <string name="are_you_sure_you_want_to_delete_text">Are you sure you want to <b>DELETE</b></string>
    <string name="update_todo_task_text">Update todo task</string>
    <string name="update_info_message_text">Edit the detail\'s below to update a task into your todo list</string>
    <string name="updated_successfully_toast_text">Task is updated successfully…</string>
    <string name="not_updated_successfully_toast_text">Task isn\'t updated successfully…</string>
    <string name="deleted_successfully_toast_text">Deleted successfully…</string>
    <string name="deleted_unsuccessfully_toast_text">Deleted un-successfully…</string>
    <string name="setting_s_text">Setting\'s</string>
    <string name="about_text">About</string>
    <string name="share_with_all_friend_s_text">Share With All Friend\'s</string>
    <string name="rate_us_text">Rate Us</string>
    <string name="more_app_s_text">More App\'s</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="check_update_text">Check Update</string>
    <string name="appearance_text">Appearance</string>
    <string name="color_scheme_text">Color Scheme</string>
    <string name="active_text">Active</string>
    <string name="thanks_for_your_feedback_toast_text">Thanks for your feedback.</string>
    <string name="select_text">Select</string>
    <string name="cancel_text">Cancel</string>
    <string name="are_you_sure_you_want_to_exit_text">Are you sure you want to EXIT?</string>
    <string name="security_questions_text">Security Questions</string>
    <string name="what_is_your_favourite_book_question">What is your favourite book?</string>
    <string name="what_is_your_favourite_teacher_name_question">What is your favourite teacher name?</string>
    <string name="what_is_your_favourite_game_question">What is your favourite game?</string>
    <string name="what_is_your_school_name_question">What is your school name?</string>
    <string name="select_security_question_text">Select security question</string>
    <string name="please_enter_answer_here_error_text">Please!Enter answer here…</string>
    <string name="forgot_password_text">Forgot password!</string>
    <string name="enter_right_answer_error_text">Enter right answer…</string>
    <string name="listview_text">ListView</string>
    <string name="gridview_text">GridView</string>
    <string name="sort_text">Sort</string>
    <string name="title_text">Title</string>
    <string name="day_of_week_text">Day of week</string>
    <string name="sort_by_text">Sort by</string>
    <string name="date_text">Date</string>
    <string name="month_text">Month</string>
    <string name="year_text">Year</string>
    <string name="ascending_a_z_text">Ascending (A-Z)</string>
    <string name="descending_z_a_text">Descending (Z-A)</string>
    <string name="english_text">English</string>
    <string name="text_size_text">Text Size</string>
    <string name="enjoy_multiple_colors_text">Enjoy Multiple Colors</string>
    <string name="visit_our_app_store_text">Visit Our App Store</string>
    <string name="please_tell_your_experience_text">Please tell your experience</string>
    <string name="feedback_text">Feedback</string>
    <string name="give_your_suggestions_and_feedback_text">Give your suggestions &amp; feedback</string>
    <string name="share_app_text">Share App</string>
    <string name="share_our_app_to_your_friends_and_family_text"><![CDATA[Share our app to your friends & family]]></string>
    <string name="read_our_privacy_policy_text">Read our privacy policy</string>
    <string name="there_is_no_activity_available_to_handle_this_action_toast_text">There is no activity available to handle this action.</string>
    <string name="share_via_text">Share via…!</string>
    <string name="rate_us_message_text">Thank you for using our \'To Do List App!\'\nWe strive to provide the best user experience.\nYour feedback fuels our improvement.</string>
    <string name="rate_our_app_text">Rate Our App</string>
    <string name="thanks_for_your_feedback_text">Thanks for your feedback.</string>
    <string name="please_rate_our_app_toast_text">Please! Rate our app…</string>
    <string name="check_your_internet_connection_toast_text">Check your internet connection…</string>
    <string name="apply_text">Apply</string>
    <string name="please_select_the_type_of_feedback_text">Please select the type of feedback…</string>
    <string name="sign_up_issues_text">Sign Up issues</string>
    <string name="sign_in_issues_text">Sign In issues</string>
    <string name="tasks_save_issues_text">Tasks save issues</string>
    <string name="tasks_update_issues_text">Tasks update issues</string>
    <string name="tasks_delete_issues_text">Tasks delete issues</string>
    <string name="sign_out_issues_text">Sign Out issues</string>
    <string name="other_issues_text">Other issues</string>
    <string name="type_your_suggestions_for_the_app_here_hint">Type your suggestions for the app here…</string>
    <string name="submit_text">Submit</string>
    <string name="please_select_at_least_one_issue_to_submit_toast_text">Please!Select at least one issue to submit…</string>
    <string name="write_your_issues_here_text">Write your issues here…</string>
    <string name="completed_text">Completed</string>
    <string name="for_using_an_app_text">For using an app.</string>
    <string name="come_back_we_shall_meet_again_text">Come back\nwe shall meet again.</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="light_mode_text">Light Mode</string>
    <string name="asterik" translatable="false">*</string>
    <string name="ad_is_loading_text">Ad is loading…</string>
    <string name="features_text">Features</string>
    <string name="switch_between_light_dark_mode_text">Switch between Light/Dark mode</string>
    <string name="general_settings_text">General Settings</string>
    <string name="see_the_required_settings_text">See the required settings</string>
    <string name="navigation_drawer_open_text">Navigation drawer open</string>
    <string name="navigation_drawer_close_text">Navigation drawer close</string>
    <string name="to_do_list_task_reminder_app_text">To Do List: Task Reminder App</string>
    <string name="check_our_more_app_s_on_play_store_text">Check our more app\'s on play store</string>
    <string name="this_task_is_already_saved_toast_text">This task is already saved…</string>
    <string name="your_data_will_be_deleted_permanently_after_24_hours_text">Your data will be deleted permanently after 24 hours</string>
    <string name="past_date_and_time_is_not_acceptable_toast">Past date &amp; time is not acceptable…</string>
    <string name="reset_text">Reset</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="task_text">Task</string>
    <string name="reminder_text">Reminder</string>
    <string name="loading_text">Loading…</string>
    <string name="search_here_hint">Search here…</string>
    <string name="allow_permission_text">Allow Permission</string>
    <string name="allow_notification_s_to_remind_you_about_your_tasks_text">Allow notification\'s to remind you about your task\'s.</string>
    <string name="deny_text">Deny</string>
    <string name="allow_text">Allow</string>
    <string name="select_language_text">Select Language</string>
    <string name="choose_your_native_language_text">Choose your native language</string>
    <string name="language_text">Language</string>
    <string name="search_language_hint">Search language…</string>
    <string name="open_settings_text">Open Setting\'s</string>
    <string name="allow_notifications_permission_from_settings_text">Allow notification\'s permission from setting\'s.</string>

</resources>