<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color_scheme_dialog_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_boxes_light_mode_background"
    android:paddingHorizontal="@dimen/_10sdp"
    android:paddingBottom="@dimen/_8sdp">

    <TextView
        android:id="@+id/color_scheme_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_scheme_text"
        android:textAllCaps="false"
        android:textColor="@color/defaultColor"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/color_scheme_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:overScrollMode="never"
        android:scrollbarThumbVertical="@android:color/transparent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/select_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_scheme_text_view"
        tools:listitem="@layout/color_scheme_recycler_view_single_item_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/select_text"
        android:textAllCaps="false"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_scheme_recycler_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_3sdp"
        android:text="@string/cancel_text"
        android:textAllCaps="false"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@id/select_button"
        app:layout_constraintEnd_toStartOf="@id/select_button"
        app:layout_constraintTop_toTopOf="@id/select_button" />

</androidx.constraintlayout.widget.ConstraintLayout>