<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/screensBackgroundColor"
    app:cardCornerRadius="@dimen/_10sdp"
    app:strokeColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_8sdp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_permission_text"
            android:textColor="@color/defaultColor"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:fontFamily="@font/cabin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/allow_notification_s_to_remind_you_about_your_tasks_text"
            android:textColor="@color/blackAndWhiteViewsColor"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:fontFamily="@font/cabin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTV" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/denyAndCancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:minHeight="@dimen/_50sdp"
            android:stateListAnimator="@null"
            android:text="@string/deny_text"
            android:textAllCaps="false"
            android:textColor="@color/defaultColor"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:backgroundTint="@color/negative_buttons_pressed_and_unpressed_states_background"
            app:cornerRadius="@dimen/_5sdp"
            app:fontFamily="@font/cabin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/allowAndOpenSettingsBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTV"
            app:strokeColor="@color/defaultColor"
            app:strokeWidth="@dimen/_1sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/allowAndOpenSettingsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:minHeight="@dimen/_50sdp"
            android:stateListAnimator="@null"
            android:text="@string/allow_text"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:backgroundTint="@color/positive_buttons_pressed_and_unpressed_states_background"
            app:cornerRadius="@dimen/_5sdp"
            app:fontFamily="@font/cabin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/denyAndCancelBtn"
            app:layout_constraintTop_toBottomOf="@id/descriptionTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>