<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screensBackgroundColor"
    tools:context=".presentation.activities.FeedbackActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/defaultColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backArrowIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_arrow_icon" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/toolbarTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/feedback_text"
                    android:textAllCaps="false"
                    android:textColor="@color/whiteColor"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:fontFamily="@font/cabin_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/backArrowIV"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:overScrollMode="never"
        android:scrollbarThumbVertical="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/selectFeedbackTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/please_select_the_type_of_feedback_text"
                android:textAllCaps="false"
                android:textColor="@color/blackAndWhiteViewsColor"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:fontFamily="@font/cabin_medium"
                app:layout_constraintBottom_toTopOf="@id/signUpIssuesCB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/signUpIssuesCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/blackAndWhiteViewsColor"
                app:buttonTint="@color/defaultColor"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/sign_up_issues_text"
                android:fontFamily="@font/cabin_medium"
                app:layout_constraintBottom_toTopOf="@id/signInIssuesCB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectFeedbackTV" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/signInIssuesCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/blackAndWhiteViewsColor"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                app:buttonTint="@color/defaultColor"
                android:text="@string/sign_in_issues_text"
                android:fontFamily="@font/cabin_medium"
                app:layout_constraintBottom_toTopOf="@id/tasksSaveIssuesCB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUpIssuesCB" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/tasksSaveIssuesCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/blackAndWhiteViewsColor"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                app:buttonTint="@color/defaultColor"
                android:text="@string/tasks_save_issues_text"
                android:fontFamily="@font/cabin_medium"
                app:layout_constraintBottom_toTopOf="@id/tasksUpdateIssuesCB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInIssuesCB" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/tasksUpdateIssuesCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/blackAndWhiteViewsColor"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                app:buttonTint="@color/defaultColor"
                android:text="@string/tasks_update_issues_text"
                android:fontFamily="@font/cabin_medium"
                app:layout_constraintBottom_toTopOf="@id/tasksDeleteIssuesCB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tasksSaveIssuesCB" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/tasksDeleteIssuesCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/blackAndWhiteViewsColor"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                app:buttonTint="@color/defaultColor"
                android:text="@string/tasks_delete_issues_text"
                android:fontFamily="@font/cabin_medium"
                app:layout_constraintBottom_toTopOf="@id/signOutIssuesCB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tasksUpdateIssuesCB" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/signOutIssuesCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/blackAndWhiteViewsColor"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/sign_out_issues_text"
                app:buttonTint="@color/defaultColor"
                android:fontFamily="@font/cabin_medium"
                app:layout_constraintBottom_toTopOf="@id/otherIssuesCB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tasksDeleteIssuesCB" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/otherIssuesCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/blackAndWhiteViewsColor"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/other_issues_text"
                app:buttonTint="@color/defaultColor"
                android:fontFamily="@font/cabin_medium"
                app:layout_constraintBottom_toTopOf="@id/feedbackEditTextCV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signOutIssuesCB" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/feedbackEditTextCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/feedbackAndSearchETCVColor"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_2sdp"
                app:strokeColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/otherIssuesCB"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/feedbackET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:gravity="top"
                    android:hint="@string/type_your_suggestions_for_the_app_here_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/editTextsHintTextColor"
                    android:fontFamily="@font/cabin_medium"
                    android:textColor="@color/blackAndWhiteViewsColor"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_11ssp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/negative_buttons_pressed_and_unpressed_states_background"
                android:minHeight="@dimen/_50sdp"
                android:stateListAnimator="@null"
                android:text="@string/cancel_text"
                android:textAllCaps="false"
                android:textColor="@color/defaultColor"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_5sdp"
                app:strokeColor="@color/defaultColor"
                app:strokeWidth="@dimen/_1sdp"
                android:fontFamily="@font/cabin_medium"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/feedbackEditTextCV"
                app:layout_constraintEnd_toStartOf="@id/submitButton"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/positive_buttons_pressed_and_unpressed_states_background"
                android:minHeight="@dimen/_50sdp"
                android:stateListAnimator="@null"
                android:text="@string/submit_text"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_5sdp"
                android:fontFamily="@font/cabin_medium"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                app:layout_constraintStart_toEndOf="@id/cancelButton"
                app:layout_constraintTop_toBottomOf="@id/feedbackEditTextCV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>